--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ PySide6==6.7.0
 aiohttp==3.9.5
 qasync==0.27.1
 rich==13.7.1
-aiofiles==23.2.1 
+aiofiles==23.2.1
+pyinstaller>=5.0.0
+Pillow>=9.0.0 
