feat: 完善gitignore规则，增加用户数据和缓存文件忽略

--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,14 @@ Thumbs.db
 BigFilesMD5s.json
 dlc/
 dlc_download_state.json
+# 用户数据和缓存
+*.state
+*.cache
+user_data/
+cache/
+downloads/
+temp/
+.temp/
 
 # Build and distribution
 logs/
