--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,11 @@ Thumbs.db
 BigFilesMD5s.json
 dlc/
 dlc_download_state.json
+# 忽略所有副本和备份文件
+*副本*
+*_backup*
+*_copy*
+*.bak
 # 用户数据和缓存
 *.state
 *.cache
